--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%=  title %></title>
-  
-  <link rel="stylesheet" href="<%=baseUrl%>/css/main.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/vendors/toastify.css">
-  <script src="js/vendors/toastify.js"></script>
-</head>
-<body>
-  <%- include("./nav.ejs"); -%>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title><%= title %></title>
 
-  <div class="container">
+    <link rel="stylesheet" href="<%=baseUrl%>/css/main.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/vendors/toastify.css" />
+    <script src="js/vendors/toastify.js"></script>
+  </head>
+  <body>
+    <%- include("./nav.ejs"); -%>
+
+    <div class="container">
