--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -40,6 +40,23 @@
               <% } %>  
               <p id="error-msg"  class="error-msg"></p>
             <input type="submit" value="Login" class="btn solid">
+            <p>
+              <a href="/find-user" style="text-decoration: none; color: black;" onMouseOut="this.style.color='black'"  onMouseOver="this.style.color='blue'" >Forgotten Password</a>
+            </p>
+            <p class="social-text">Or Sign in with social platforms</p>
+            <div class="social-media">
+              <a href="#" class="social-icon">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-google"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
           </div>
         </form>
       </div>
