update profile page

--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -5,12 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
-    <link rel="stylesheet" href="http://localhost:8077/css/styles.css" />
+    <link rel="stylesheet" href="http://localhost:8078/css/styles.css" />
   </head>
   <body>
     <div class="container mx-auto md:mt-6">
       <div class="grid sm:grid-cols-12">
         <div class="sm:col-span-3 xs:col-span-12 justify-center items-center">
+          <div class="justify-center items-center mb-3">
+            <img
+              class=""
+              src="https://img.icons8.com/color/96/000000/circled-user-male-skin-type-7--v2.png"
+            />
+            <div>
+              <h4 class="text-xl font-medium">Gazi Rahad</h4>
+              <small class="font-medium">gazi.rahad871@gmail.com</small>
+              <button class="px-3 py-0 text-sm bg-green-300 rounded-full">
+                <small class="font-medium text-white">verified</small>
+              </button>
+            </div>
+          </div>
           <ul>
             <li class="p-3 font-bold text-uppercase">Public profile</li>
             <li class="p-3 font-bold text-uppercase">Account settings</li>
@@ -141,7 +154,6 @@
               py-4
               bg-white
               rounded-md
-              shadow-md
               dark:bg-gray-800
             "
           >
