--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -42,9 +42,11 @@
   <div class="toggle">
     <ion-icon name="menu-outline" class="open"></ion-icon>
   </div>
+
   <ul>
     <li class="btn-logout"><a href="/logout">logout</a></li>
     <li><a href=""><%=loggedInUser.userName %></a></li>
     <li><%=loggedInUser.userRole %></li>
+    <li><a href="/user/profile">Profile page</a></li>
   </ul>
 </div>
