update env sample

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -51,7 +51,7 @@
               <a href="#" class="social-icon">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="#" class="social-icon">
+              <a href="/auth/google" class="social-icon">
                 <i class="fab fa-google"></i>
               </a>
               <a href="#" class="social-icon">
