--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
-    <link rel="stylesheet" href="http://localhost:8078/css/styles.css" />
+    <link rel="stylesheet" href="<% process.env.BASE_URL %>/css/styles.css" />
   </head>
   <body>
     <div class="container mx-auto md:mt-6">
@@ -17,8 +17,11 @@
               src="https://img.icons8.com/color/96/000000/circled-user-male-skin-type-7--v2.png"
             />
             <div>
-              <h4 class="text-xl font-medium">Gazi Rahad</h4>
-              <small class="font-medium">gazi.rahad871@gmail.com</small>
+              <% console.log('user name', loggedInUser.userName) %>
+              <h4 class="text-xl font-medium"><%= loggedInUser.userName %></h4>
+              <small class="font-medium"
+                ><%= loggedInUser.userMailFormDB %>
+              </small>
               <button class="px-3 py-0 text-sm bg-green-300 rounded-full">
                 <small class="font-medium text-white">verified</small>
               </button>
@@ -101,7 +104,25 @@
               <div class="mt-3">
                 <h5 class="text-sm mb-1">Connect with</h5>
 
+                <a href="/auth/facebook">
+                  <button
+                    title="Connect"
+                    class="
+                      px-3
+                      py-1
+                      rounded-full
+                      text-sm
+                      font-medium
+                      text-white
+                      bg-blue-600
+                      hover:bg-red-500
+                    "
+                  >
+                    facebook
+                  </button>
+                </a>
                 <button
+                  title="Remove"
                   class="
                     px-3
                     py-1
@@ -109,23 +130,10 @@
                     text-sm
                     font-medium
                     text-white
-                    bg-blue-400
+                    bg-red-400
                   "
                 >
-                  facebook
-                </button>
-                <button
-                  class="
-                    px-3
-                    py-1
-                    rounded-full
-                    text-sm
-                    font-medium
-                    text-white
-                    bg-blue-400
-                  "
-                >
-                  google
+                  Gazi
                 </button>
                 <button
                   class="
@@ -143,6 +151,9 @@
               </div>
             </div>
           </div>
+          <a href="/remove/facebook"
+            ><button class="bg-red-600 px-4 py-2">Remove Facebook</button>
+          </a>
           <!-- Markup for Edit user data-->
 
           <div
