--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,3 +2,10 @@
 
 
 <%- include("../partials/footer"); -%>
+
+if(user){
+  <button type="" > <a href="/remove/google"> khoaiz </a> </button>
+}else{
+
+  <button type="" > <a href="/auth/google">  google </a> </button>
+}
