--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -17,7 +17,7 @@
               src="https://img.icons8.com/color/96/000000/circled-user-male-skin-type-7--v2.png"
             />
             <div>
-              <% console.log('user name', loggedInUser.userName) %>
+              <% console.log('user name', loggedInUser.userMailFormDB) %>
               <h4 class="text-xl font-medium"><%= loggedInUser.userName %></h4>
               <small class="font-medium"
                 ><%= loggedInUser.userMailFormDB %>
@@ -28,6 +28,7 @@
             </div>
           </div>
           <ul>
+            <a href="/"><li class="p-3 font-bold text-uppercase">Home</li> </a>
             <li class="p-3 font-bold text-uppercase">Public profile</li>
             <li class="p-3 font-bold text-uppercase">Account settings</li>
             <li class="p-3 font-bold text-uppercase">Claim</li>
@@ -104,6 +105,8 @@
               <div class="mt-3">
                 <h5 class="text-sm mb-1">Connect with</h5>
 
+                <% if(!platformUser) {%>
+
                 <a href="/auth/facebook">
                   <button
                     title="Connect"
@@ -115,26 +118,83 @@
                       font-medium
                       text-white
                       bg-blue-600
-                      hover:bg-red-500
                     "
                   >
                     facebook
                   </button>
                 </a>
+                <% } else{ %>
+
                 <button
                   title="Remove"
                   class="
+                    btn-hover
                     px-3
                     py-1
                     rounded-full
                     text-sm
                     font-medium
                     text-white
-                    bg-red-400
+                    bg-blue-600
                   "
                 >
-                  Gazi
+                  <%= platformUser.user_name %>
                 </button>
+                <% } %> <% if(!platformUser) {%>
+
+                <a href="/auth/google">
+                  <button
+                    title="Connect"
+                    class="
+                      px-3
+                      py-1
+                      rounded-full
+                      text-sm
+                      font-medium
+                      text-white
+                      bg-blue-600
+                    "
+                  >
+                    google
+                  </button>
+                </a>
+                <% } else if(platformUser.platform === 'google') { %>
+
+                <button
+                  title="Remove"
+                  class="
+                    btn-hover
+                    px-3
+                    py-1
+                    rounded-full
+                    text-sm
+                    font-medium
+                    text-white
+                    bg-red-600
+                  "
+                >
+                  <%= platformUser.user_name %>
+                </button>
+                <% } else{%>
+
+                <a href="/auth/google">
+                  <button
+                    title="Connect"
+                    class="
+                      px-3
+                      py-1
+                      rounded-full
+                      text-sm
+                      font-medium
+                      text-white
+                      bg-red-400
+                    "
+                  >
+                    google
+                  </button>
+                </a>
+                <% } %>
+
                 <button
                   class="
                     px-3
@@ -151,9 +211,7 @@
               </div>
             </div>
           </div>
-          <a href="/remove/facebook"
-            ><button class="bg-red-600 px-4 py-2">Remove Facebook</button>
-          </a>
+
           <!-- Markup for Edit user data-->
 
           <div
@@ -309,5 +367,18 @@
         </div>
       </div>
     </div>
+    <!-- <button class="btn-hover bg-blue-500 px-4">hover</button> -->
+    <script>
+      const hoverBtn = document.getElementsByClassName("btn-hover")[0];
+      const hoverBtnText = hoverBtn.textContent;
+
+      hoverBtn.addEventListener("mouseenter", () => {
+        //alert("ok");
+        hoverBtn.innerHTML = `<a href="/remove/facebook">Remove</a>`;
+      });
+      hoverBtn.addEventListener("mouseleave", () => {
+        hoverBtn.innerHTML = hoverBtnText;
+      });
+    </script>
   </body>
 </html>
