--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -10,6 +10,8 @@
   <body>
     <div class="container mx-auto md:mt-6">
       <div class="grid sm:grid-cols-12">
+
+        <!-- User side navbar -->
         <div class="sm:col-span-3 xs:col-span-12 justify-center items-center">
           <div class="justify-center items-center mb-3">
             <img
@@ -24,6 +26,9 @@
               </small>
               <button class="px-3 py-0 text-sm bg-green-300 rounded-full">
                 <small class="font-medium text-white">verified</small>
+              </button>
+              <button class="px-3 py-0 text-sm bg-yellow-300 rounded-full">
+                <small class="font-medium text-white">Unverfied</small>
               </button>
             </div>
           </div>
