--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -6,30 +6,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Profile</title>
     <link rel="stylesheet" href="<% process.env.BASE_URL %>/css/styles.css" />
+
+    <style>
+      .animated {
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
+        -webkit-animation-fill-mode: both;
+        animation-fill-mode: both;
+      }
+
+      .animated.faster {
+        -webkit-animation-duration: 500ms;
+        animation-duration: 500ms;
+      }
+
+      .fadeIn {
+        -webkit-animation-name: fadeIn;
+        animation-name: fadeIn;
+      }
+
+      .fadeOut {
+        -webkit-animation-name: fadeOut;
+        animation-name: fadeOut;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+
+        to {
+          opacity: 1;
+        }
+      }
+
+      @keyframes fadeOut {
+        from {
+          opacity: 1;
+        }
+
+        to {
+          opacity: 0;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="container mx-auto md:mt-6">
       <div class="grid sm:grid-cols-12">
-
         <!-- User side navbar -->
         <div class="sm:col-span-3 xs:col-span-12 justify-center items-center">
           <div class="justify-center items-center mb-3">
+            <% let url = avatar %> <% if(url.search('https://') === -1){ %>
             <img
-              class=""
-              src="https://img.icons8.com/color/96/000000/circled-user-male-skin-type-7--v2.png"
+              class="rounded-full h-20 w-20 object-cover"
+              src="/uploads/avatars/<%= avatar %>"
             />
+            <% } else{%>
+            <img
+              class="rounded-full h-20 w-20 object-cover"
+              src="<%= avatar %>"
+            />
+            <% } %> <% console.log(url.search('https://') === -1) %>
+
             <div>
               <% console.log('user name', loggedInUser.userMailFormDB) %>
               <h4 class="text-xl font-medium"><%= loggedInUser.userName %></h4>
               <small class="font-medium"
                 ><%= loggedInUser.userMailFormDB %>
               </small>
+              <% if(status === 2) {%>
+              <button class="px-3 py-0 text-sm bg-yellow-300 rounded-full">
+                <a href="#"
+                  ><small class="font-medium text-white">Unverfied</small></a
+                >
+              </button>
+              <% } else{ %>
               <button class="px-3 py-0 text-sm bg-green-300 rounded-full">
                 <small class="font-medium text-white">verified</small>
               </button>
-              <button class="px-3 py-0 text-sm bg-yellow-300 rounded-full">
-                <small class="font-medium text-white">Unverfied</small>
-              </button>
+              <% } %>
             </div>
           </div>
           <ul>
@@ -43,75 +99,62 @@
         <div class="sm:col-span-9 xs:col-span-12">
           <div class="">
             <div class="px-4 py-2 rounded-md relative">
-              <img
-                class=""
-                src="https://img.icons8.com/color/96/000000/circled-user-male-skin-type-7--v2.png"
-              />
-              <label class="absolute top-12 left-40">
-                <input class="hidden" type="file" />
-                <small
-                  class="
-                    text-sm
-                    font-medium
-                    cursor-pointer
-                    rounded-full
-                    px-4
-                    py-2
-                    bg-gray-200
-                  "
-                >
-                  Change
-                </small>
-              </label>
+              <!-- Change profile-->
               <div>
-                <h5 class="text-sm mb-1">Sync a profile picture with</h5>
+                <% if(url.search('https://') === -1){ %>
+                <img
+                  class="rounded-full h-20 w-20 object-cover"
+                  src="/uploads/avatars/<%= avatar %>"
+                />
+                <% } else{%>
+                <img
+                  class="rounded-full h-20 w-20 object-cover"
+                  src="<%= avatar %>"
+                />
+                <% } %>
+                <!--End change profile-->
+              </div>
 
+              <div class="absolute top-12 mt-2 ml-13">
                 <button
-                  class="
-                    px-3
-                    py-1
-                    rounded-full
-                    text-sm
-                    font-medium
-                    text-white
-                    bg-blue-400
-                  "
+                  class="cursor-pointer rounded-full shadow-md bg-blue-200 p-1"
+                  onclick="openModal()"
                 >
-                  facebook
-                </button>
-                <button
-                  class="
-                    px-3
-                    py-1
-                    rounded-full
-                    text-sm
-                    font-medium
-                    text-white
-                    bg-blue-400
-                  "
-                >
-                  google
-                </button>
-                <button
-                  class="
-                    px-3
-                    py-1
-                    rounded-full
-                    text-sm
-                    font-medium
-                    text-white
-                    bg-blue-400
-                  "
-                >
-                  twitter
+                  <img
+                    src="https://img.icons8.com/fluency/25/000000/add-image.png"
+                  />
                 </button>
               </div>
 
+              <!-- Markup for user Connection -->
               <div class="mt-3">
+                <!-- <%# platformUser.map((el)=>{ %>
+                <p><%# el.user_name %></p>
+                <img class="" src="<%# el.user_avatar %>" />
+
+                <%# }) %> -->
                 <h5 class="text-sm mb-1">Connect with</h5>
 
-                <% if(!platformUser) {%>
+                <% if(platformUser.find(connection => connection.platform ===
+                'facebook')) {%>
+                <button
+                  title="Remove"
+                  class="
+                    btn-hover
+                    px-3
+                    py-1
+                    rounded-full
+                    text-sm
+                    font-medium
+                    text-white
+                    bg-blue-600
+                  "
+                >
+                  <% let fbUserName = platformUser.find(el => el.platform ===
+                  'facebook') %> <%= fbUserName.user_name %>
+                </button>
 
+                <% } else{ %>
                 <a href="/auth/facebook">
                   <button
                     title="Connect"
@@ -128,60 +171,27 @@
                     facebook
                   </button>
                 </a>
+
+                <% } %> <% if(platformUser.find(connection =>
+                connection.platform === 'google')) {%>
+                <button
+                  title="Remove"
+                  class="
+                    btn-hover-google
+                    px-3
+                    py-1
+                    rounded-full
+                    text-sm
+                    font-medium
+                    text-white
+                    bg-red-400
+                  "
+                >
+                  <% let googleUserName = platformUser.find(el => el.platform
+                  === 'google') %> <%= googleUserName.user_name %>
+                </button>
+
                 <% } else{ %>
-
-                <button
-                  title="Remove"
-                  class="
-                    btn-hover
-                    px-3
-                    py-1
-                    rounded-full
-                    text-sm
-                    font-medium
-                    text-white
-                    bg-blue-600
-                  "
-                >
-                  <%= platformUser.user_name %>
-                </button>
-                <% } %> <% if(!platformUser) {%>
-
-                <a href="/auth/google">
-                  <button
-                    title="Connect"
-                    class="
-                      px-3
-                      py-1
-                      rounded-full
-                      text-sm
-                      font-medium
-                      text-white
-                      bg-blue-600
-                    "
-                  >
-                    google
-                  </button>
-                </a>
-                <% } else if(platformUser.platform === 'google') { %>
-
-                <button
-                  title="Remove"
-                  class="
-                    btn-hover
-                    px-3
-                    py-1
-                    rounded-full
-                    text-sm
-                    font-medium
-                    text-white
-                    bg-red-600
-                  "
-                >
-                  <%= platformUser.user_name %>
-                </button>
-                <% } else{%>
-
                 <a href="/auth/google">
                   <button
                     title="Connect"
@@ -198,8 +208,8 @@
                     google
                   </button>
                 </a>
-                <% } %>
 
+                <% } %>
                 <button
                   class="
                     px-3
@@ -372,18 +382,260 @@
         </div>
       </div>
     </div>
+
+    <!-- modale -->
+    <div
+      class="
+        main-modal
+        fixed
+        w-full
+        h-100
+        inset-0
+        z-50
+        overflow-hidden
+        flex
+        justify-center
+        items-center
+        animated
+        fadeIn
+        faster
+      "
+      style="background: rgba(0, 0, 0, 0.7)"
+    >
+      <div
+        class="
+          border border-teal-500
+          shadow-lg
+          modal-container
+          bg-white
+          w-11/12
+          md:max-w-md
+          mx-auto
+          rounded
+          shadow-lg
+          z-50
+          overflow-y-auto
+        "
+      >
+        <div class="modal-content py-4 text-left px-5">
+          <!--Title-->
+          <div class="flex justify-between items-center pb-3">
+            <p class="text-2xl font-bold">Profile</p>
+            <div class="modal-close cursor-pointer z-50">
+              <svg
+                class="fill-current text-black"
+                xmlns="http://www.w3.org/2000/svg"
+                width="18"
+                height="18"
+                viewBox="0 0 18 18"
+              >
+                <path
+                  d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"
+                ></path>
+              </svg>
+            </div>
+          </div>
+          <!--Body-->
+          <div class="my-3 relative">
+            <div>
+              <% if(url.search('https://') === -1){ %>
+              <img
+                class="rounded-full h-20 w-20 object-cover"
+                src="/uploads/avatars/<%= avatar %>"
+              />
+              <% } else{%>
+              <img
+                class="rounded-full h-20 w-20 object-cover"
+                src="<%= avatar %>"
+              />
+              <% } %>
+              <label class="absolute top-12 left-40">
+                <input class="hidden" type="file" />
+                <small
+                  class="
+                    text-sm
+                    font-medium
+                    cursor-pointer
+                    rounded-full
+                    px-4
+                    py-2
+                    bg-gray-200
+                  "
+                >
+                  Change
+                </small>
+              </label>
+              <div>
+                <h5 class="text-sm mb-1">Sync a profile picture with</h5>
+
+                <div class="flex justify-between mt-3 items-center">
+                  <div>
+                    <% let facebookProfile = platformUser.find(connection =>
+                    connection.platform === 'facebook') %>
+                    <img
+                      class="h-16 w-16 ml-2 mb-2 rounded-full"
+                      src="<%= facebookProfile.user_avatar %>"
+                    />
+
+                    <a href="/profile/picture/<%= facebookProfile.id %>">
+                      <button
+                        class="
+                          px-3
+                          py-1
+                          rounded-full
+                          text-sm
+                          font-medium
+                          text-white
+                          bg-blue-400
+                        "
+                      >
+                        facebook
+                      </button>
+                    </a>
+                  </div>
+
+                  <div>
+                    <% let googleProfile = platformUser.find(connection =>
+                    connection.platform === 'google') %>
+                    <img
+                      class="h-16 w-16 mb-2 ml-1 rounded-full"
+                      src="<%= googleProfile.user_avatar %>"
+                    />
+                    <a href="/profile/picture/<%= googleProfile.id %>">
+                      <button
+                        class="
+                          px-3
+                          py-1
+                          rounded-full
+                          text-sm
+                          font-medium
+                          text-white
+                          bg-blue-400
+                        "
+                      >
+                        google
+                      </button>
+                    </a>
+                  </div>
+
+                  <div>
+                    <img
+                      class="h-16 w-16 mb-2 rounded-full"
+                      src="https://img.icons8.com/color/96/000000/circled-user-male-skin-type-7--v2.png"
+                    />
+
+                    <button
+                      class="
+                        px-3
+                        py-1
+                        rounded-full
+                        text-sm
+                        font-medium
+                        text-white
+                        bg-blue-400
+                      "
+                    >
+                      twitter
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <!--End change profile-->
+            </div>
+          </div>
+          <!--Footer-->
+          <div class="flex justify-end pt-2">
+            <button
+              class="
+                focus:outline-none
+                modal-close
+                px-3
+                py-2
+                bg-blue-400
+                rounded-lg
+                text-white
+                hover:bg-gray-300
+              "
+            >
+              Cancel
+            </button>
+            <button
+              class="
+                focus:outline-none
+                px-4
+                bg-teal-500
+                py-2
+                ml-3
+                rounded-lg
+                text-white
+                bg-green-400
+              "
+            >
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- <button class="btn-hover bg-blue-500 px-4">hover</button> -->
     <script>
+      // for facebook
       const hoverBtn = document.getElementsByClassName("btn-hover")[0];
       const hoverBtnText = hoverBtn.textContent;
-
       hoverBtn.addEventListener("mouseenter", () => {
         //alert("ok");
         hoverBtn.innerHTML = `<a href="/remove/facebook">Remove</a>`;
       });
-      hoverBtn.addEventListener("mouseleave", () => {
-        hoverBtn.innerHTML = hoverBtnText;
+      setTimeout(() => {
+        hoverBtn.addEventListener("mouseleave", () => {
+          hoverBtn.innerHTML = hoverBtnText;
+        });
+      }, 2000);
+
+      // for google
+      const googleHoverBtn =
+        document.getElementsByClassName("btn-hover-google")[0];
+      const googleHoverBtnText = googleHoverBtn.textContent;
+
+      googleHoverBtn.addEventListener("mouseenter", () => {
+        //alert("ok");
+        googleHoverBtn.innerHTML = `<a href="/remove/google">Remove</a>`;
       });
+      setTimeout(() => {
+        googleHoverBtn.addEventListener("mouseleave", () => {
+          googleHoverBtn.innerHTML = googleHoverBtnText;
+        });
+      }, 2000);
+
+      //modal
+      const modal = document.querySelector(".main-modal");
+      const closeButton = document.querySelectorAll(".modal-close");
+
+      const modalClose = () => {
+        modal.classList.remove("fadeIn");
+        modal.classList.add("fadeOut");
+        setTimeout(() => {
+          modal.style.display = "none";
+        }, 500);
+      };
+
+      const openModal = () => {
+        modal.classList.remove("fadeOut");
+        modal.classList.add("fadeIn");
+        modal.style.display = "flex";
+      };
+
+      for (let i = 0; i < closeButton.length; i++) {
+        const elements = closeButton[i];
+
+        elements.onclick = (e) => modalClose();
+
+        modal.style.display = "none";
+
+        window.onclick = function (event) {
+          if (event.target == modal) modalClose();
+        };
+      }
     </script>
   </body>
 </html>
