--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -47,6 +47,6 @@
     <li class="btn-logout"><a href="/logout">logout</a></li>
     <li><a href=""><%=loggedInUser.userName %></a></li>
     <li><%=loggedInUser.userRole %></li>
-    <li><a href="/user/profile">Profile page</a></li>
+    <li><a href="/profile">Profile page</a></li>
   </ul>
 </div>
