--- a/views/pages/userProfile.ejs
+++ b/views/pages/userProfile.ejs
@@ -77,7 +77,7 @@
               </small>
               <% if(status === 2) {%>
               <button class="px-3 py-0 text-sm bg-yellow-300 rounded-full">
-                <a href="#"
+                <a href="/user-verify"
                   ><small class="font-medium text-white shadow-lg"
                     >Unverfied</small
                   ></a
