week history date show

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -62,7 +62,7 @@
   </div>
   <%weekHistory.map(h=>{%>
   <div class="details">
-    <div class="title">hello</div>
+    <div class="title"><%= h.date  %>  </div>
     <div class="project-name">hello world</div>
     <div class="start-time"><%=h.start %></div>
     <end class="time"><%=h.end %></end>
